[project]
name = "rag-project-02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "chromadb>=1.4.0",
    "docx2txt>=0.9",
    "ipykernel>=6.29.5",
    "jq>=1.10.0",
    "langchain>=0.3.13",
    "langchain-community>=0.3.13",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.2.14",
    "langgraph>=0.5.4",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.0",
    "tiktoken>=0.8.0",
    "unstructured>=0.18.27",
]
